testsuite/poke.pkl/array-diag-1.pk
/* { dg-do compile } */

["foo", 2]; /* { dg-error "same type" } */
